[package]
name = "sync-marker"
version = "0.1.0"
authors = ["Koji Ota <afterjnih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
actix = "0.8.2"
juniper = "0.13"
env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
